Fixed issue #30 Made the top navbar sticky so that
the sign out message appears below it, rather than
under it.

--- a/shop/static/css/sellerhome.css
+++ b/shop/static/css/sellerhome.css
@@ -12,7 +12,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 80px; /* Adjust for fixed navbar */
+  /* margin-top: 80px; /1* Adjust for fixed navbar *1/ */
 }
 h1 {
     font-weight: bold; /* Bold font for main heading */
@@ -48,10 +48,10 @@ h5 {
 .navbar {
   display: flex;
   align-items: center;
-  padding: 1rem 5%;
+  padding: 0.5rem 5%;
   background: #f66569;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  position: fixed;
+  position: sticky;
   top: 0;
   width: 100%;
   z-index: 1000;
